<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/readrow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ck"
    tools:context=".Readsavings">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/addsavings2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addsavings2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/view" />

    <TextView
        android:id="@+id/addsavings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/string_readsavings"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="256dp"
        android:layout_height="14dp"
        android:layout_marginTop="12dp"
        android:max="100"
        android:progress="50"
        android:progressTint="#B82424"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addsavings2" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/goalname"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/gname"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/Goal_type"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/gtype"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/amount"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/rs"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/rdate"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/ddate"
                    android:textColor="#000000"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/r_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:shadowColor="#000000"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="19dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/Color2"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/Color3"
                    android:text="@string/edit" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>